--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "PingPongCockpit"]
 	path = PingPongCockpit
-	url = git@github.com:dfrieling/PingPongCockpit.git
+	url = https://github.com/dfrieling/PingPongCockpit.git
